修改仓库名称为@lego/antd

--- a/packages/lego-antd/package.json
+++ b/packages/lego-antd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lego/components",
+  "name": "@lego/antd",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
