--- a/packages/lego-core/package.json
+++ b/packages/lego-core/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "@babel/core": "^7.10.4",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.10.4",
