--- a/packages/micloud/package.json
+++ b/packages/micloud/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@lego/antd",
+  "name": "micloud",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,19 +16,28 @@
     "@babel/preset-typescript": "^7.10.4",
     "@lego/core": "^1.0.0",
     "@types/react": "^16.9.41",
+    "@types/react-router-dom": "^5.1.5",
     "antd": "^4.4.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-import": "^1.13.0",
+    "clean-webpack-plugin": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "webpack": "^4.43.0"
   },
   "peerDependencies": {
     "antd": "^4.4.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "axios": "^0.19.2"
   },
   "dependencies": {
-    "@lego/dev": "^1.0.0"
+    "@lego/dev": "^1.0.0",
+    "axios": "^0.19.2",
+    "css-loader": "^4.2.1",
+    "less-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^0.9.0"
   }
 }
